開発環境としては不要なため、一旦Dockerfileを削除

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   discord-getting-messages:
     depends_on:
       - dynamodb-local
-    build: .
+    image: "golang:1.18-bullseye"
     container_name: discord-getting-messages
     ports:
       - "8080:8080"
